youben/dev/taobao/taobao-sms-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: taobao-sms
spec:
  ports:
  - port: 80
    targetPort: 80
