youben/dev/taobao/taobao-sms-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: taobao-sms-ingress
  labels: 
    app: taobao-sms
  annotations:
    kubernetes.io/ingress.class: "app"
spec:
  rules:
  - host: gw.api.taobao.com
    http:
      paths:
      - backend:
          serviceName: taobao-sms
          servicePort: 80
